# aseba

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  ActionBlock.qml  Aseba.qml  Block.qml  BlockAcceleration.qml  BlockDefinition.qml  BlockEditor.qml  BlockEditorTitleBar.qml  BlockLink.qml  BlockLinkArrow.qml  BlocksList.qml  BlocksPane.qml  Brewfile  CMakeLists.txt  CompilationLabel.qml  Compiler.qml  DashelTargetDialog.qml  Editor.qml  EditorAdvanced.qml  EditorSimple.qml  EditorTitleBar.qml  EventBlock.qml  FloatingActionButton.qml  FullEditor.qml  HDPIImage.qml  HighlightTimer.qml  InfraredButton.qml  InfraredLed.qml  Link.qml  LinkSimple.qml  LinkingPath.qml  LoadSaveDialog.qml  MotorActionBlock.qml  MotorSlider.qml  (+44 more)
aseba/: CMakeLists.txt
aseba/clients/: CMakeLists.txt
aseba/clients/cmd/: CMakeLists.txt  cmd.cpp
aseba/clients/dump/: dump.cpp
aseba/clients/eventlogger/: eventlogger.cpp
aseba/clients/exec/: exec.cpp
aseba/clients/joy/: asebajoy.cpp
aseba/clients/massloader/: CMakeLists.txt  massloader.cpp
aseba/clients/qtcommon/: AeslEditor.cpp  AeslEditor.h  CMakeLists.txt  CustomWidgets.cpp  MobsyaApplication.cpp  MobsyaApplication.h  asebastudio.qrc
aseba/clients/replay/: play.cpp  rec.cpp
aseba/clients/studio/: AeslEditor.cpp  AeslEditor.h  CMakeLists.txt  ClickableLabel.h  ConfigDialog.cpp  ConfigDialog.h  ConstantsWidget.cpp  ConstantsWidget.h  CustomDelegate.cpp  CustomDelegate.h  CustomWidgets.cpp  CustomWidgets.h  DashelTarget.cpp  DashelTarget.h  EventViewer.cpp  EventViewer.h  EventsWidget.cpp  EventsWidget.h  FindDialog.cpp  FindDialog.h  HelpViewer.cpp  HelpViewer.h  LockButton.cpp  LockButton.h  MainWindow.cpp  MainWindow.h  ModelAggregator.cpp  ModelAggregator.h  NamedValuesVectorModel.cpp  NamedValuesVectorModel.h  NewNamedValueDialog.cpp  NewNamedValueDialog.h  NodeTab.cpp  NodeTab.h  NodeTabsManager.cpp  NodeTabsManager.h  PlotTab.cpp  PlotTab.h  Plugin.cpp  Plugin.h  (+21 more)
aseba/clients/thymioupgrader/: CMakeLists.txt  ThymioUpgrader.cpp  ThymioUpgrader.h  thymioupgrader.qrc  thymioupgrader_de.ts  thymioupgrader_en.ts  thymioupgrader_es.ts  thymioupgrader_fr.ts  thymioupgrader_it.ts  thymioupgrader_ja.ts  thymioupgrader_pl.ts  thymioupgrader_tl.ts  thymioupgrader_tr.ts  thymioupgrader_zh.ts
aseba/clients/thymiownetconfig/: CMakeLists.txt  ThymioWNetConfig.cpp  ThymioWNetConfig.h  thymiownetconfig.qrc  thymiownetconfig_de.ts  thymiownetconfig_en.ts  thymiownetconfig_es.ts  thymiownetconfig_fr.ts  thymiownetconfig_it.ts  thymiownetconfig_ja.ts  thymiownetconfig_pl.ts  thymiownetconfig_tl.ts  thymiownetconfig_tr.ts  thymiownetconfig_zh.ts
aseba/clients/vpl/: ActionBlocks.cpp  Block.cpp  Block.h  Buttons.cpp  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerVisitors.cpp  EventActionsSet.cpp  EventBlocks.cpp  LogSignalMapper.cpp  LogSignalMapper.h  ResizingView.h  Scene.cpp  StateBlocks.h  ThymioVPLApplication.cpp  ThymioVPLApplication.h  ThymioVPLStandalone.cpp  ThymioVPLStandalone.h  ThymioVisualProgramming.cpp  ThymioVisualProgramming.h  UsageLogger.cpp  thymiovpl.cpp
aseba/clients/vpl2/: AUTHORS.md  CMakeLists.txt  thymio-vpl2.pro
aseba/common/: CMakeLists.txt  authors.h  consts.h
aseba/common/about/: AboutDialog.cpp  CMakeLists.txt  asebaqtabout.qrc  qtabout_de.ts  qtabout_el.ts  qtabout_en.ts  qtabout_es.ts  qtabout_fr.ts  qtabout_it.ts  qtabout_ja.ts  qtabout_pl.ts  qtabout_ru.ts  qtabout_tl.ts  qtabout_tr.ts  qtabout_zh.ts
aseba/compiler/: CMakeLists.txt  compiler.cpp  errors.cpp  errors_code.h  identifier-lookup.cpp  parser.cpp  tree-dump.cpp  tree-emit.cpp  tree-expand.cpp  tree-optimize.cpp  tree-typecheck.cpp  tree.h
aseba/flatbuffers/: CMakeLists.txt  fb_message_ptr.h  thymio-flatbuffers.cpp  thymio.fbs
aseba/launcher/: CMakeLists.txt
aseba/protobuf/: CMakeLists.txt  thymio.proto
aseba/qt-thymio-dm-client-lib/: CMakeLists.txt  qflatbuffers.h  remoteconnectionrequest.cpp  remoteconnectionrequest.h  request.cpp  request.h  thymio-api.h  thymio2wirelessdongle.cpp  thymio2wirelessdongle.h  thymiodevicemanagerclient.cpp  thymiodevicemanagerclient.h  thymiodevicemanagerclientendpoint.cpp  thymiodevicemanagerclientendpoint.h  thymiodevicesmodel.cpp  thymiodevicesmodel.h  thymionode.cpp  thymionode.h
aseba/switch/: CMakeLists.txt  app_endpoint.h  app_server.h  aseba_description_receiver.h  aseba_endpoint.h  aseba_message_parser.h  aseba_node.cpp  aseba_node.h  aseba_node_registery.cpp  aseba_node_registery.h  aseba_tcpacceptor.cpp  aseba_tcpacceptor.h  dispatcher.h  error.cpp  error.h  flatbuffers_message_reader.h  flatbuffers_message_writer.h  flatbuffers_messages.h  libusb_utils.h  log.cpp  log.h  main.cpp  node_id.h  serial_usb_device.h  serialacceptor.cpp  serialacceptor.h  serialserver.cpp  serialserver.h  usb_utils.h  usbacceptor.cpp  usbacceptor.h  usbcontext.h  usbdevice.cpp  usbdevice.h  usbserver.cpp  usbserver.h  usbservice.cpp  usbservice.h  variant.hpp
aseba/targets/: CMakeLists.txt
aseba/thymio-device-manager/: CMakeLists.txt  aesl_parser.cpp  aesl_parser.h  app_endpoint.cpp  app_endpoint.h  app_server.cpp  app_server.h  app_token_manager.h  aseba_description_receiver.h  aseba_device.cpp  aseba_device.h  aseba_endpoint.cpp  aseba_endpoint.h  aseba_message_parser.h  aseba_message_writer.h  aseba_node.cpp  aseba_node.h  aseba_node_registery.cpp  aseba_node_registery.h  aseba_nodeid_generator.h  aseba_property.h  aseba_tcpacceptor.cpp  aseba_tcpacceptor.h  common_types.h  error.cpp  error.h  events.h  flatbuffers_message_reader.h  flatbuffers_message_writer.h  flatbuffers_messages.h  fw_update_service.cpp  fw_update_service.h  group.cpp  group.h  interfaces.cpp  interfaces.h  log.cpp  log.h  main.cpp  node_id.h  (+32 more)
aseba/vm/: CMakeLists.txt  natives.c  vm.c  vm.h
menu/: CMakeLists.txt
menu/freedesktop/: org.mobsya.ThymioSuite.desktop  thymio-launcher.desktop
menu/osx/: launcher.icns  org.mobsya.ThymioDeviceManager.icns  org.mobsya.ThymioSuite.icns
menu/src/: generate-pixmaps.py
tests/simulator/: CMakeLists.txt  aseba-test-simulator.cpp
(+601 files in other folders)
