install(FILES "freedesktop/thymio-launcher.desktop" DESTINATION share/applications)
install(FILES "freedesktop/48x48/thymio-launcher.png" DESTINATION share/icons/hicolor/48x48/apps)
install(FILES "freedesktop/256x256/thymio-launcher.png" DESTINATION share/icons/hicolor/256x256/apps)
install(FILES "src/thymio-launcher.svg" DESTINATION share/icons/hicolor/scalable/apps)