install(FILES "freedesktop/org.mobsya.ThymioSuite.desktop" DESTINATION share/applications)
install(FILES "freedesktop/48x48/org.mobsya.ThymioSuite.png" DESTINATION share/icons/hicolor/48x48/apps)
install(FILES "freedesktop/256x256/org.mobsya.ThymioSuite.png" DESTINATION share/icons/hicolor/256x256/apps)
install(FILES "src/org.mobsya.ThymioSuite.svg" DESTINATION share/icons/hicolor/scalable/apps)