find_package(Protobuf REQUIRED)
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS LITE _LITE thymio.proto)
#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS EXPORT_MACRO DLL_EXPORT thymio.proto)
#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS DESCRIPTORS PROTO_DESCS thymio.proto)
add_library(thymio-protobuf-protocol ${PROTO_SRCS} ${PROTO_HDRS} thymio.proto)
target_link_libraries(thymio-protobuf-protocol protobuf::libprotobuf-lite)
target_include_directories(thymio-protobuf-protocol PUBLIC ${CMAKE_BINARY_DIR})

protobuf_generate_JS(JS_SOURCES OUTPUT_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/protobuf-js/" thymio.proto)
add_custom_target(thymio-protobuf-js ALL DEPENDS ${JS_SOURCES})
